Bump storm.kafka.client.version from 3.9.0 to 4.1.0 (#8243)
* Bump storm.kafka.client.version from 3.9.0 to 4.1.0

Bumps `storm.kafka.client.version` from 3.9.0 to 4.1.0.

Updates `org.apache.kafka:kafka-clients` from 3.9.0 to 4.1.0

Updates `org.apache.kafka:kafka_2.13` from 3.9.0 to 4.1.0

---
updated-dependencies:
- dependency-name: org.apache.kafka:kafka-clients
  dependency-version: 4.1.0
  dependency-type: direct:production
  update-type: version-update:semver-major
- dependency-name: org.apache.kafka:kafka_2.13
  dependency-version: 4.1.0
  dependency-type: direct:production
  update-type: version-update:semver-major
...

Signed-off-by: dependabot[bot] <support@github.com>

* Fixing licenses

* Adapting code to Kafka 4 API

* Adapting code to Kafka 4 API

* Adapting code to Kafka 4 API

* Adapting code to Kafka 4 API

* Fixing licenses

* Fixing licenses

* Fixing licenses

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Rui Abreu <rui.abreu@gmail.com>